--- a/src/client/public/template/password.html
+++ b/src/client/public/template/password.html
@@ -54,7 +54,7 @@
 
 <body>
 <div id="app" class="container">
-	<!-- <el-page-header @back="location='../'"></el-page-header> -->
+	<el-page-header @back="location='../'"></el-page-header>
     <div class="container" style="margin-top: 4rem;">
         {% if error -%}
         <el-alert
