--- a/src/client/public/template/user-info-rc2.html
+++ b/src/client/public/template/user-info-rc2.html
@@ -211,7 +211,7 @@
     methods: {
       edit_nickname: function (event) {
         var thisvue = this;
-        axios.put('{{ url_for("yobot_user_info_nickname", qqid=user.qqid) }}', { nickname: thisvue.nickname }).then(function (res) {
+        axios.put('{{ url_for("yobot_user_info_api", qqid=user.qqid) }}', { nickname: thisvue.nickname }).then(function (res) {
           thisvue.edit = false;
         }).catch(function (error) {
           alert('改名失败');
