--- a/src/client/public/template/user.html
+++ b/src/client/public/template/user.html
@@ -1,95 +1,210 @@
 <!DOCTYPE html>
+<html lang="zh">
 
 <head>
-    <meta name='viewport' content='width=device-width, initial-scale=1' charset="utf-8" />
-    <title>yobot用户面板</title>
-    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.19.2/axios.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.13.0/index.js"></script>
-    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.13.0/theme-chalk/index.css">
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+  <meta name="format-detection" content="telephone=yes" />
+  <link rel="shortcut icon" href="{{ url_for('yobot_static', filename='icon.png') }}" type="image/x-icon">
+  <meta name='viewport' content='width=device-width, initial-scale=1' charset="utf-8" />
+  <title>用户面板</title>
+  <link href="https://cdn.jsdelivr.net/npm/ionicons@^4.0.0/dist/css/ionicons.min.css" rel="stylesheet" type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/quasar@1.12.13/dist/quasar.min.css" rel="stylesheet" type="text/css">
+  <style>
+    input {
+      font-size: 16px;
+    }
+
+    #q-app {
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+
+    #q-app {
+      position: relative;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    #q-app::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(255, 255, 255, 0.8);
+      z-index: -1;
+    }
+  </style>
 </head>
 
 <body>
-    <h1>yobot用户面板</h1>
-    <div id="app">
-        <p>欢迎{{ user.nickname }}</p>
-        <div>上次登录：[[ from_ts({{ session.get('last_login_time') }}) ]] at {{ session.get('last_login_ipaddr') }}（[[ addr.join('') ]]）
-        </div>
-        {% if user.authority_group < 10 -%}
-        <el-row>
-            <a href="{{ url_for('yobot_setting') }}">
-                <el-button type="primary">设置</el-button>
-            </a>
-            <a href="{{ url_for('yobot_users_managing') }}">
-                <el-button type="primary">用户管理</el-button>
-            </a>
-            <a href="{{ url_for('yobot_groups_managing') }}">
-                <el-button type="primary">群管理</el-button>
-            </a>
-        </el-row>
-        <br />
-        {%- endif %}
-        <el-row>
-            <a href="{{ url_for('yobot_user_info', qqid=user.qqid) }}">
-                <el-button type="primary">个人中心</el-button>
-            </a>
-            <a href="{{ url_for('yobot_reset_pwd') }}">
-                <el-button type="primary">修改密码</el-button>
-            </a>
-            <a href="{{ url_for('yobot_logout') }}">
-                <el-button type="primary">登出</el-button>
-            </a>
-        </el-row>
-        <el-row>
-            {% if not clan_groups -%}
-            <el-tooltip effect="dark" placement="bottom">
-                <div slot="content">你还没有选择默认公会<br />请在你的公会群里发送“加入公会”来设置默认公会</div>
-                <el-button type="primary" disabled>无公会</el-button>
-            </el-tooltip>
-            {%- else -%}
-            {% for group in clan_groups -%}
-            <a href="{{ url_for('yobot_clan', group_id=group['group_id']) }}">
-                <el-button type="primary">公会：{{ group['group_name'] }}</el-button>
-            </a>
-            {% endfor -%}
-            {%- endif %}
-        </el-row>
-    </div>
-    <p><a href="{{ url_for('yobot_about') }}">关于yobot</a></p>
-    <footer style="position: absolute;bottom: 0;left: 50%;transform: translate(-50%, -50%);">
-        powered by <a href="https://github.com/pcrbot/yobot">yobot</a>
-    </footer>
+  <div id="q-app" :style="'background-image: url(' + bg_url + ')'">
+    <q-layout view="hHh lpR fFf">
+      <q-header class="bg-primary text-white shadow-2">
+        <q-toolbar>
+          <q-btn type="a" href="{{ url_for('yobot_logout') }}" flat round dense icon="ion-backspace" class="q-mr-sm">
+          </q-btn>
+          <q-separator dark vertical inset></q-separator>
+          <q-toolbar-title stretch flat>用户面板</q-toolbar-title>
+        </q-toolbar>
+      </q-header>
+
+      <q-page-container>
+        <q-page padding>
+          <div class="row justify-center q-my-md">
+            <div class="col-auto">
+              <q-avatar size="10rem">
+                <img :src="'https://q1.qlogo.cn/g?b=qq&nk=' + {{user.qqid}} + '&s=640'">
+              </q-avatar>
+            </div>
+          </div>
+
+          <div class="row justify-center q-my-md">
+            <div class="col-auto">
+              <span class="text-h4">欢迎回家, {{ user.nickname }}</span>
+            </div>
+          </div>
+
+          <div class="row justify-center q-my-md">
+            <div class="col-xs-10 col-md-6">
+              <div class="row justify-between items-end">
+                <div class="col-auto"><span class="text-body1">上次登录</span></div>
+                <div class="col-auto">
+                  <span class="text-body2">[[ from_ts({{ session.get('last_login_time') }}) ]]</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row justify-center q-my-md">
+            <div class="col-xs-10 col-md-6">
+              <div class="row justify-between items-end">
+                <div class="col-auto"><span class="text-body1">登录地址</span></div>
+                <div class="col-auto">
+                  <span class="text-body2">{{ session.get('last_login_ipaddr') }}</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row justify-center q-my-md">
+            <div class="col-xs-10 col-md-6">
+              <div class="row justify-between items-end">
+                <div class="col-auto"><span class="text-body1">登录地点</span></div>
+                <div class="col-auto"><span class="text-body2">[[ addr.join('') ]]</span></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row justify-center q-my-md">
+          {% if user.authority_group < 10 -%}
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 q-pa-xs">
+              <q-btn class="full-width" type="a" href="{{ url_for('yobot_setting') }}" label="设置" color="accent">
+              </q-btn>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 q-pa-xs">
+              <q-btn class="full-width" type="a" href="{{ url_for('yobot_users_managing') }}" label="用户管理" color="info">
+              </q-btn>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 q-pa-xs">
+              <q-btn class="full-width" type="a" href="{{ url_for('yobot_groups_managing') }}" label="公会管理" color="info">
+              </q-btn>
+            </div>
+          <!-- </div> -->
+          {% endif %}
+
+          <!-- <div class="row justify-center q-my-md"> -->
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 q-pa-xs">
+              <q-btn class="full-width" type="a" href="{{ url_for('yobot_user_info', qqid=user.qqid) }}" label="个人中心"
+                color="info"></q-btn>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 q-pa-xs">
+              <q-btn class="full-width" type="a" href="{{ url_for('yobot_reset_pwd') }}" label="修改密码" color="warning">
+              </q-btn>
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 q-pa-xs">
+              <q-btn class="full-width" type="a" href="{{ url_for('yobot_logout') }}" label="登出" color="negative">
+              </q-btn>
+            </div>
+          </div>
+
+          {% if not clan_groups -%}
+          <div class="row justify-center q-my-md">
+            <div class="col-auto">
+              <q-banner inline-actions class="text-white bg-red">
+                你还没有加入公会，请在你的公会群里发送“加入公会”来加入公会
+              </q-banner>
+            </div>
+          </div>
+          {%- else -%}
+          <div class="row justify-center q-mt-lg">
+          {% for group in clan_groups -%}
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 q-pa-xs">
+              <q-btn class="full-width" type="a" href="{{ url_for('yobot_clan', group_id=group['group_id']) }}"
+                label="{{ group['group_name'] }}" color="positive"></q-btn>
+            </div>
+          {% endfor -%}
+          </div>
+          {%- endif %}
+        </q-page>
+      </q-page-container>
+
+      <q-footer class="bg-primary shadow-2">
+        <q-toolbar>
+          <q-btn type="a" href="{{ url_for('yobot_homepage') }}" flat round dense icon="ion-home" class="q-mr-sm">
+          </q-btn>
+          <q-separator dark vertical inset></q-separator>
+          <q-toolbar-title>Powered by yobot</q-toolbar-title>
+          <q-btn type="a" href="https://github.com/pcrbot/yobot" stretch flat icon="ion-logo-github"></q-btn>
+        </q-toolbar>
+      </q-footer>
+    </q-layout>
+  </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/vue@^2.0.0/dist/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/quasar@1.12.13/dist/quasar.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/quasar@1.12.13/dist/lang/zh-hans.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/quasar@1.12.13/dist/icon-set/ionicons-v4.umd.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/axios/0.19.2/axios.min.js"></script>
+<script src="{{ url_for('yobot_static', filename='js/banZoom.js') }}"></script>
 <script>
-    if (!Object.defineProperty) {
-        alert('浏览器版本过低');
-    }
-    new Vue({
-        el: '#app',
-        data: {
-            addr: [],
-        },
-        mounted() {
-            var thisvue = this;
-            axios.get('{{ url_for("yobot_api_iplocation", ip=session["last_login_ipaddr"]) }}').then(function (res) {
-                thisvue.addr = res.data;
-            }).catch(function (error) {
-                console.log(error);
-                thisvue.addr = ['未知'];
-            });
-        },
-        methods: {
-            from_ts: function (ts) {
-                if (ts == 0) {
-                    return '-';
-                }
-                var nd = new Date();
-                nd.setTime(ts * 1000);
-                return nd.toLocaleString('chinese', { hour12: false });
-            },
-        },
-        delimiters: ['[[', ']]'],
-    })
+  Quasar.iconSet.set(Quasar.iconSet.ioniconsV4)
+</script>
+<script>
+  if (!Object.defineProperty) {
+    alert('浏览器版本过低');
+  }
+  new Vue({
+    el: '#q-app',
+    data: {
+      bg_url: "{{ url_for('yobot_static', filename='bg.jpeg') }}",
+      addr: [],
+    },
+    mounted() {
+      var thisvue = this;
+      axios.get('{{ url_for("yobot_api_iplocation", ip=session["last_login_ipaddr"]) }}').then(function (res) {
+        thisvue.addr = res.data;
+      }).catch(function (error) {
+        console.log(error);
+        thisvue.addr = ['未知'];
+      });
+    },
+    methods: {
+      from_ts: function (ts) {
+        if (ts == 0) {
+          return '-';
+        }
+        var nd = new Date();
+        nd.setTime(ts * 1000);
+        return nd.toLocaleString('chinese', { hour12: false });
+      },
+    },
+    delimiters: ['[[', ']]'],
+  })
 </script>
 
 </html>
